Changed navigation elements and fixed mobile display on safari

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -106,7 +106,14 @@ body {
 				gap: 0.4rem;
 			}
 
-			li:hover {
+			a {
+				color: inherit;
+				text-decoration: none;
+			}
+
+			a:hover,
+			a:focus,
+			a:active {
 				color: $accent;
 				transition: color 0.3s;
 				cursor: pointer;
@@ -131,9 +138,8 @@ main {
 	flex-direction: column;
 	gap: 4.8rem;
 	padding: 2.4rem;
-	padding-right: 0;
+
 	border-radius: 12px 12px 0 0;
-	overflow-y: scroll;
 	@include scrollbar();
 }
 
@@ -296,7 +302,6 @@ main {
 		align-items: flex-end;
 		padding: 1.2rem 2.4rem;
 		font-size: 1.6rem;
-		margin-right: -2.4rem;
 	}
 
 	&__record:first-child {
